# car_pole

./: .gitignore  AGENTS.md  Agent.md  README.md  pyproject.toml  requirements.txt
docs/: game_design.md  game_plan.md  handoff.md  setup.md
src/rl_racing/: __init__.py  actions.py  config.py  env.py  episode.py  geometry.py  observations.py  play.py  policies.py  renderer.py  track.py  vehicle.py  view_trajectory.py  watch_policy.py
src/rl_racing/rl/: __init__.py  dqn.py  networks.py  ppo.py  replay_buffer.py  train_dqn.py  train_ppo.py  vector_env.py
tests/: test_dqn.py  test_env.py  test_episode.py  test_observations.py  test_play_timing.py  test_ppo.py  test_renderer.py  test_replay_buffer.py  test_track.py  test_vector_env.py  test_vehicle.py
