[project]
name = "rl-racing-playground"
version = "0.1.0"
description = "A from-scratch 2D racing environment for reinforcement learning experiments."
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pygame>=2.5",
  "torch>=2.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
rl-racing-play = "rl_racing.play:main"
rl-racing-train-dqn = "rl_racing.rl.train_dqn:main"
rl-racing-view-trajectory = "rl_racing.view_trajectory:main"
rl-racing-watch-policy = "rl_racing.watch_policy:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
